--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "project who must help to calculate subscription fee",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "cross-env NODE_ENV=development webpack --mode development --watch",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "watch": " webpack serve --mode development --watch",
+    "start": "cross-env NODE_ENV=development webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -19,8 +22,21 @@
   "homepage": "https://github.com/HakasLepehen/GS_1C#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
+    "mini-css-extract-plugin": "^1.3.7",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.22.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0",
+    "normalize.css": "^8.0.1"
   }
 }
