--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "file-loader": "^6.2.0",
     "normalize.css": "^8.0.1"
   }
