--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "project who must help to calculate subscription fee",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --mode development --watch",
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": " webpack serve --mode development --watch",
     "start": "cross-env NODE_ENV=development webpack serve --mode development"
@@ -25,6 +25,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^1.3.7",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass": "^1.32.7",
@@ -38,6 +39,6 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "file-loader": "^6.2.0",
-    "normalize.css": "^8.0.1"
+    "jquery": "^3.5.1"
   }
 }
