--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/HakasLepehen/GS_1C#readme",
   "devDependencies": {
+    "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
